Edited defconfig for the new commits

--- a/arch/arm/configs/herring_defconfig
+++ b/arch/arm/configs/herring_defconfig
@@ -1856,6 +1856,7 @@ CONFIG_RADIO_ADAPTERS=y
 CONFIG_PVR_SGX=y
 CONFIG_PVR_BUILD_RELEASE=y
 # CONFIG_PVR_BUILD_DEBUG is not set
+# CONFIG_PVR_LIMIT_MINFREQ is not set
 CONFIG_PVR_NEED_PVR_DPF=y
 CONFIG_PVR_NEED_PVR_ASSERT=y
 CONFIG_PVR_PERCONTEXT_PB=y
@@ -1902,6 +1903,8 @@ CONFIG_FB_S3C_NUM_OVLY_WIN=1
 CONFIG_FB_S3C_NUM_BUF_OVLY_WIN=3
 # CONFIG_FB_S3C_VIRTUAL is not set
 CONFIG_FB_S3C_TL2796=y
+CONFIG_FB_VOODOO=y
+# CONFIG_FB_VOODOO_DEBUG_LOG is not set
 CONFIG_FB_S3C_NT35580=y
 # CONFIG_FB_S3C_LVDS is not set
 # CONFIG_FB_S3C_AMS701KA is not set
@@ -1976,6 +1979,11 @@ CONFIG_SND_S5PC1XX_I2S=y
 CONFIG_S5P_INTERNAL_DMA=y
 CONFIG_SND_S5P_WM8994_MASTER=y
 CONFIG_SND_SOC_SAMSUNG_HERRING_WM8994=y
+CONFIG_SND_VOODOO=y
+CONFIG_SND_VOODOO_HP_LEVEL_CONTROL=y
+CONFIG_SND_VOODOO_HP_LEVEL=54
+CONFIG_SND_VOODOO_RECORD_PRESETS=y
+# CONFIG_SND_VOODOO_DEVELOPMENT is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_WM8994_SAMSUNG=y
