--- a/arch/arm/configs/herring_defconfig
+++ b/arch/arm/configs/herring_defconfig
@@ -1097,6 +1097,11 @@ CONFIG_USB_SWITCH_FSA9480=y
 # CONFIG_SENSORS_LIS3_I2C is not set
 CONFIG_SAMSUNG_MODEMCTL=y
 CONFIG_PN544=y
+CONFIG_BLD=y
+CONFIG_GENERIC_BLN=y
+CONFIG_BLX=y
+CONFIG_TOUCH_WAKE=y
+CONFIG_CUSTOM_VOLTAGE=y
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
