--- a/arch/arm/configs/alt_defconfig
+++ b/arch/arm/configs/alt_defconfig
@@ -183,6 +183,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_VR is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
