--- a/arch/arm/configs/alt_defconfig
+++ b/arch/arm/configs/alt_defconfig
@@ -174,8 +174,8 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
+# CONFIG_IOSCHED_BFQ is not set
+# CONFIG_CGROUP_BFQIO is not set
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_DEADLINE is not set
@@ -504,24 +504,24 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVEX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_MINMAX=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_MINMAX is not set
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_SMARTASS2=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
-CONFIG_CPU_FREQ_MIN_TICKS=10
-CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
+# CONFIG_CPU_FREQ_GOV_INTERACTIVEX is not set
+# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_MIN_TICKS is not set
+# CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER is not set
 # CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
